# kafka-templates

kafka_messagings/: compose.yaml
kafka_messagings/microservice_01/: .env
kafka_messagings/microservice_01/app/: main.py  settings.py
separate conts/check/: compose.yaml
separate conts/check/fast/: Dockerfile.dev  pyproject.toml
separate conts/check/fast/fast/: main.py
separate conts/kafka/: compose.yaml
todo with protobuf/: compose.yaml
todo with protobuf/todo/: Dockerfile.dev  pyproject.toml
todo with protobuf/todo/app/: main.py
